# churn-analysis

./: .gitattributes  .pre-commit-config.yaml  README.md  main.ipynb  pyproject.toml
