[tool.poetry]
name = "project-2"
version = "0.1.0"
description = ""
authors = ["Victor Zucchetti <victorzucchetti@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
plotly-express = "^0.4.1"
numpy = "^1.26.4"
nbformat = "^5.10.4"
openpyxl = "^3.1.2"
ipykernel = "^6.29.4"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
